--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 # --------- pytorch --------- #
 torch>=1.10.0
 torchvision>=0.11.0
@@ -8,6 +10,9 @@ torchmetrics==0.9.3
 hydra-core==1.2.0
 hydra-colorlog==1.2.0
 hydra-optuna-sweeper==1.2.0
+
+#----------timm---------------#
+timm==0.6.7
 
 # --------- loggers --------- #
 # wandb
